<resources>
    <string name="app_name">glosary_linear</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="lbl_code">code</string>
<string name="msg_your_personal_d2">Your personal data will be used to process your order, support your experience throughout this website, and for other purposes described in our</string>
<string name="lbl_fortune_rice">Fortune rice</string>
<string name="msg_use_to_pay_100">Use to pay 100% on any orders</string>
<string name="msg_sft_kiwi_slice">SFT kiwi slice 
(Dried)</string>
<string name="lbl_m">M</string>
<string name="msg_legal_disclaime">Legal Disclaimer:</string>
<string name="lbl_total_mrp">Total MRP</string>
<string name="lbl_incorrect_otp">Incorrect OTP</string>
<string name="msg_we_would_like_t">We would like to give the best to our valuable customer that\u2019s why our experts check quality of every products before we deliver it to you and promises to do further to keep faith constant.</string>
<string name="lbl_s">S</string>
<string name="lbl_t">T</string>
<string name="lbl_my_balance">My Balance</string>
<string name="lbl_bread_crums">Bread Crums</string>
<string name="lbl_w">W</string>
<string name="lbl_12_oct_2021">12 Oct, 2021</string>
<string name="lbl_about">About</string>
<string name="msg_sg_grocery_is_c">SG Grocery is committed to protecting your privacy. This Privacy Policy explains our data processing practices and your options regarding the ways in which your personal data is used. If you have concerning your personal information or any questions please contact us to given email at  customercare@SGGrocery.us please note that the practices of SG grocery with respect to data collected and used by Grocery Factory only in connection with this website with links to this policy are governed by Grocery Factory privacy policy ("Privacy Policy") as amended from time to time and not the privacy policy in effect at the time the data was collected. Please regularly review our Privacy Policy. If you have objections to the Privacy Policy, you can immediately contact us.</string>
<string name="lbl_state">State</string>
<string name="lbl_description">Description</string>
<string name="lbl_4_00">$4.00</string>
<string name="lbl_tata_arhar_dal">TATA Arhar Dal</string>
<string name="lbl_phone_number">Phone number</string>
<string name="lbl_app_navigation">App Navigation</string>
<string name="lbl_payment2">Payment</string>
<string name="msg_on_minimum_purc">on minimum purchase of $20</string>
<string name="msg_what_is_minimum">What is minimum order value?</string>
<string name="lbl_payment3">Payment</string>
<string name="lbl_log_out">Log Out</string>
<string name="lbl_17_oct_2021">17 Oct, 2021</string>
<string name="lbl_privacy_policy2">privacy policy</string>
<string name="lbl_50">$50</string>
<string name="msg_your_personal_d">Your personal data will be used to process your order, support your experience throughout this website, and for other purposes described in our privacy policy.</string>
<string name="lbl_harshey_s_bar">Harshey\u2019s Bar</string>
<string name="lbl_dairy_products">Dairy Products</string>
<string name="msg_one_of_our_work">One of our workspace experts will reach out to you based on your communicatoin preferences.</string>
<string name="lbl_order_history">Order History</string>
<string name="lbl_f">F</string>
<string name="lbl_3_pcs">3 pcs.</string>
<string name="lbl_get_in_touch">Get In Touch !</string>
<string name="lbl_last_name">Last name</string>
<string name="lbl_additional_info">Additional Info</string>
<string name="msg_director_of_pr">Director of 
Products</string>
<string name="lbl_1_kg2">(1 kg)</string>
<string name="lbl_subscribed">Subscribed</string>
<string name="msg_organic_tomatoe">Organic Tomatoes</string>
<string name="lbl_edit_order">Edit Order</string>
<string name="lbl_details">Details</string>
<string name="lbl_sofit_soya_milk">Sofit soya milk</string>
<string name="lbl_enter_your_code">Enter your code</string>
<string name="msg_transaction_id">Transaction Id : 25917892598342</string>
<string name="msg_why_choose_us">~ Why Choose us? ~</string>
<string name="lbl_pinapple">Pinapple</string>
<string name="lbl_sg_grocery">SG Grocery</string>
<string name="lbl_amul_gold_milk">Amul Gold Milk</string>
<string name="lbl_darrell_steward">Darrell Steward</string>
<string name="msg_search_products">Search products and brands</string>
<string name="msg_credit_debit">Credit / Debit Card</string>
<string name="lbl_jaggery_powder">Jaggery Powder</string>
<string name="lbl_choco_muffin">Choco muffin</string>
<string name="msg_check_your_app">"Check your app's UI from the below demo screens of your app."</string>
<string name="lbl_user">User</string>
<string name="lbl_featured_items">Featured Items</string>
<string name="lbl_banana">Banana</string>
<string name="lbl_apply_now">Apply Now</string>
<string name="lbl_37">37%</string>
<string name="msg_we_do_not_buy_f">We do not buy from the open 
market &amp; traders.</string>
<string name="lbl_111">+1</string>
<string name="lbl_3_25">$3.25</string>
<string name="lbl_home_screen">Home screen</string>
<string name="lbl_groceries">Groceries</string>
<string name="msg_everyday_essent">Everyday
Essentials</string>
<string name="lbl_7_am_pm">7 AM -  PM</string>
<string name="lbl_tea">Tea</string>
<string name="lbl_110">+1</string>
<string name="msg_terms_and_condi">Terms and Conditions</string>
<string name="lbl_3_units">(3 units)</string>
<string name="lbl_city">City</string>
<string name="msg_shipping_charge">Shipping Charges</string>
<string name="lbl_500_g">500 g</string>
<string name="lbl_20">$20</string>
<string name="msg_on_your_first_o">on your first order</string>
<string name="lbl_getfirst">GETFIRST</string>
<string name="lbl_discount">Discount</string>
<string name="msg_by_placing_an_o">By placing an order with us by telephone, fax, email, or online, you agree to the terms of this Agreement (the \u201cAgreement\u201d) which shall cover the terms of our deliveries to you and your use of our website. This Agreement is between you and All Seasons Grocery, LLC (the \u201cCompany\u201d or \u201cAll Seasons Grocery\u201d) that states the terms and conditions under which you may use the Site and receive deliveries from us. All Seasons Grocery is the owner of the following trademarks: All Seasons Grocery, www.allseasonsgrocery.com, and the All Seasons Grocery logo. This Agreement is binding on you whether you purchase from us via the telephone, email, fax, or our website.</string>
<string name="lbl_91_01234567890">+91 01234567890</string>
<string name="lbl_secure_payment">Secure Payment</string>
<string name="lbl_9898989898">9898989898</string>
<string name="lbl_wallet">Wallet</string>
<string name="msg_our_delivery_se">OUR DELIVERY SERVICE</string>
<string name="lbl_log_in">Log in</string>
<string name="msg_delivered_on_23">Delivered on 23 oct</string>
<string name="lbl_sg">SG</string>
<string name="lbl_otp_is_send_to">OTP Is Send to</string>
<string name="lbl_contact_us">Contact Us</string>
<string name="msg_we_will_use_you">We will use your information to provide and personalize our service. We will also use your contact details to regularly communicate with you. We may use your information to send you to offer and news from SG Groecery and services, for this we may contact you by post, email, or telephone for these purposes. We like to hear your views to help us improve our service.</string>
<string name="lbl_e_g_123">e.g. 123</string>
<string name="lbl_12">$1</string>
<string name="lbl_13">+1</string>
<string name="msg_last_updated_on">Last updated on Nov,2021</string>
<string name="lbl_1_kg7">(1 kg)</string>
<string name="lbl_50_off">50% off</string>
<string name="lbl_get_otp">Get OTP</string>
<string name="lbl_1_kg5">(1 kg)</string>
<string name="lbl_16">$1</string>
<string name="msg_what_if_i_want">What if I want to return something?</string>
<string name="lbl_1_kg6">(1 kg)</string>
<string name="lbl_17">$1</string>
<string name="lbl_14">+1</string>
<string name="lbl_1_kg3">(1 kg)</string>
<string name="lbl_15">+1</string>
<string name="lbl_1_kg4">(1 kg)</string>
<string name="msg_login_regist">Login  / Register with Mobile</string>
<string name="lbl_work_office">Work / Office</string>
<string name="lbl_18">$1</string>
<string name="lbl_upto_30_off">Upto 30% off</string>
<string name="lbl_19">+1</string>
<string name="lbl_flat">FLAT</string>
<string name="lbl_privacy_policy">Privacy Policy</string>
<string name="lbl_2_pcs">(2 pcs.)</string>
<string name="lbl_98989898">98989898</string>
<string name="lbl_submit">Submit</string>
<string name="msg_price_and_avail">PRICE AND AVAILABILITY</string>
<string name="lbl_resend">Resend</string>
<string name="msg_you_entered_an">You Entered An Incorrect OTP</string>
<string name="lbl_payment">PAYMENT</string>
<string name="msg_cashback_receiv">Cashback Received</string>
<string name="msg_from_time_to_ti">From time to time, products you order may be unavailable. If we are unable to fulfill your entire order, we will make every reasonable effort to substitute the closest product. We do not set the prices for the items you select on your grocery list. We pay the prices that each individual store has already set.&#13;
&#13;
To receive delivery, you do not need to be present to receive your order from our driver. In the case of bad weather or unforeseen delivery complications, deliveries may be delayed. We will make every effort to get your groceries to you by 5:00 pm on the date of your arrival.</string>
<string name="lbl_verify_otp">Verify OTP</string>
<string name="msg_when_you_place">When you place an order, we use all reasonable efforts to deliver to you at the time of your choosing or by 5:00 pm on the day of your arrival. Once you place your order by telephone, fax, email, or online, we will act as bailee for the ordered products. You can modify an existing order at any time up until the order leaves the store by calling our customer service number at 435-655-5071 or 435-655-1914. Please note that we reserve the right to refuse service to anyone. We reserve the right to change the cost of deliveries and/or our delivery fees at any time</string>
<string name="msg_otp_is_send_to">OTP Is Send to +91 01234567890</string>
<string name="msg_granola_premiu">Granola 
Premium Almond</string>
<string name="msg_we_accept_only">We accept only credit/debit cards.  In the event your card is declined, we reserve the right to collect funds for any uncollected transactions owed us should a payment made via credit card be declined. If you fail to pay any fees or charges when due, we may charge such amount directly to the credit card identified in your Customer Account Information and we may suspend or terminate your access to our Service. You shall be responsible and liable for any fees, including but not limited to attorney\u2019s fees and collection costs, that we may incur in our efforts to collect any unpaid balances from you.</string>
<string name="lbl_1_kg">1 kg</string>
<string name="lbl_22_00">$22.00</string>
<string name="lbl_2">$2</string>
<string name="msg_terms_of_servic">Terms of services</string>
<string name="msg_welcome_to_all">WELCOME TO ALL SG Grocery, LLC AND THANK YOU FOR REGISTERING WITH US! IT IS IMPORTANT THAT YOU REVIEW THIS AGREEMENT BECAUSE, BY ACCESSING THIS WEBSITE, BY PLACING AN ORDER WITH US BY TELEPHONE, EMAIL, FAX, OR THROUGH THIS WEBSITE, YOU ARE AGREEING TO THE TERMS AND CONDITIONS THAT GOVERN THE USE OF THE SITE AND THE TERMS UPON WHICH WE AGREE TO DELIVER TO YOU.</string>
</resources>