<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="termsOfServicesVM" type="com.glosary.app.modules.termsofservices.data.viewmodel.TermsOfServicesVM"/>
    </data>
    <LinearLayout android:gravity="start"
        android:id="@+id/linearGroup413"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylegreen_500">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarToolbar"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20pxv"
            android:layout_width="match_parent" app:contentInsetStart="0dp">
            <LinearLayout android:gravity="start"
                android:id="@+id/linearFrame"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/_183pxh"
                android:layout_marginStart="@dimen/_16pxh"
                android:layout_width="match_parent" android:orientation="horizontal">
                <ImageView android:id="@+id/imageIcon"
                    android:layout_height="@dimen/_26pxh"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_width="@dimen/_13pxh"
                    android:scaleType="fitXY" android:src="@drawable/img_icon_6"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtTermsOfServic"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16pxh"
                    android:layout_weight="0.94"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{termsOfServicesVM.termsOfServicesModel.txtTermsOfServic}"
                    style="@style/txtMontserratbold22_1" tools:text="@string/msg_terms_of_servic"/>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
        <ScrollView android:clipToPadding="false"
            android:fillViewport="true"
            android:id="@+id/scrollViewScrollview"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_24pxv"
            android:layout_weight="1" android:layout_width="match_parent">
            <LinearLayout android:gravity="start"
                android:id="@+id/linearText"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStylewhite_1">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtTermsAndCondi"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_16pxh"
                    android:layout_marginStart="@dimen/_16pxh"
                    android:layout_marginTop="@dimen/_30pxv"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@{termsOfServicesVM.termsOfServicesModel.txtTermsAndCondi}"
                    style="@style/txtMontserratsemibold22_1" tools:text="@string/msg_terms_and_condi"/>
                <TextView android:id="@+id/txtWELCOMETOALL"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_16pxh"
                    android:layout_marginStart="@dimen/_16pxh"
                    android:layout_marginTop="@dimen/_24pxv"
                    android:layout_width="match_parent"
                    android:text="@{termsOfServicesVM.termsOfServicesModel.txtWELCOMETOALL}"
                    style="@style/txtMontserratsemibold16_2" tools:text="@string/msg_welcome_to_all"/>
                <LinearLayout android:gravity="start"
                    android:id="@+id/linearText1"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_16pxh"
                    android:layout_marginStart="@dimen/_16pxh"
                    android:layout_marginTop="@dimen/_24pxv"
                    android:layout_width="match_parent" android:orientation="vertical">
                    <TextView android:id="@+id/txtByPlacingAnO"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:text="@{termsOfServicesVM.termsOfServicesModel.txtByPlacingAnO}"
                        style="@style/txtMontserratregular14_5" tools:text="@string/msg_by_placing_an_o"/>
                    <TextView android:id="@+id/txtOURDELIVERYSE"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_10pxh"
                        android:layout_marginTop="@dimen/_7pxv"
                        android:layout_width="match_parent"
                        android:text="@{termsOfServicesVM.termsOfServicesModel.txtOURDELIVERYSE}"
                        style="@style/txtMontserratsemibold18_2" tools:text="@string/msg_our_delivery_se"/>
                    <TextView android:id="@+id/txtWhenYouPlace"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8pxv"
                        android:layout_width="match_parent"
                        android:text="@{termsOfServicesVM.termsOfServicesModel.txtWhenYouPlace}"
                        style="@style/txtMontserratregular14_5" tools:text="@string/msg_when_you_place"/>
                    <TextView android:id="@+id/txtPRICEANDAVAIL"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_10pxh"
                        android:layout_marginTop="@dimen/_6pxv"
                        android:layout_width="match_parent"
                        android:text="@{termsOfServicesVM.termsOfServicesModel.txtPRICEANDAVAIL}"
                        style="@style/txtMontserratsemibold18_2" tools:text="@string/msg_price_and_avail"/>
                    <TextView android:id="@+id/txtFromTimeToTi"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5pxv"
                        android:layout_width="match_parent"
                        android:text="@{termsOfServicesVM.termsOfServicesModel.txtFromTimeToTi}"
                        style="@style/txtMontserratregular14_5" tools:text="@string/msg_from_time_to_ti"/>
                    <TextView android:id="@+id/txtPAYMENT"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_10pxh"
                        android:layout_marginStart="@dimen/_2pxh"
                        android:layout_marginTop="@dimen/_6pxv"
                        android:layout_width="wrap_content"
                        android:text="@{termsOfServicesVM.termsOfServicesModel.txtPAYMENT}"
                        style="@style/txtMontserratregular14_5" tools:text="@string/lbl_payment"/>
                    <TextView android:id="@+id/txtWeAcceptOnly"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_6pxv"
                        android:layout_width="match_parent"
                        android:text="@{termsOfServicesVM.termsOfServicesModel.txtWeAcceptOnly}"
                        style="@style/txtMontserratregular14_5" tools:text="@string/msg_we_accept_only"/>
                </LinearLayout>
                <LinearLayout android:gravity="center_horizontal"
                    android:id="@+id/linearTabbar"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_132pxv"
                    android:layout_width="match_parent" android:orientation="vertical"/>
            </LinearLayout>
        </ScrollView>
        <FrameLayout android:id="@+id/frameTabbar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" style="@style/groupStylegreen_500">
            <LinearLayout android:id="@+id/linearGroup42"
                android:layout_gravity="top|center"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/_22pxv"
                android:layout_marginTop="@dimen/_22pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <ImageView android:id="@+id/imageIcon1"
                    android:layout_height="@dimen/_25pxh"
                    android:layout_marginStart="@dimen/_30pxh"
                    android:layout_width="@dimen/_26pxh"
                    android:scaleType="fitXY" android:src="@drawable/img_icon1"/>
                <ImageView android:id="@+id/imageIocn2"
                    android:layout_height="@dimen/_25pxh"
                    android:layout_marginStart="@dimen/_59pxh"
                    android:layout_width="@dimen/_26pxh"
                    android:scaleType="fitXY" android:src="@drawable/img_iocn2"/>
                <ImageView android:id="@+id/imageIcon3"
                    android:layout_height="@dimen/_25pxh"
                    android:layout_marginStart="@dimen/_60pxh"
                    android:layout_width="@dimen/_26pxh"
                    android:scaleType="fitXY" android:src="@drawable/img_icon3_7"/>
                <ImageView android:id="@+id/imageIcon4"
                    android:layout_height="@dimen/_25pxh"
                    android:layout_marginStart="@dimen/_60pxh"
                    android:layout_width="@dimen/_26pxh"
                    android:scaleType="fitXY" android:src="@drawable/img_icon4_2"/>
                <ImageView android:id="@+id/imageIcon5"
                    android:layout_height="@dimen/_25pxh"
                    android:layout_marginEnd="@dimen/_30pxh"
                    android:layout_marginStart="@dimen/_59pxh"
                    android:layout_width="@dimen/_26pxh"
                    android:scaleType="fitXY" android:src="@drawable/img_icon5"/>
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>
</layout>
