<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="incorrectOtpVM" type="com.glosary.app.modules.incorrectotp.data.viewmodel.IncorrectOtpVM"/>
    </data>
    <LinearLayout android:id="@+id/linearIncorrectOTP"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <LinearLayout android:gravity="center_vertical"
            android:id="@+id/linearLogo"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_16pxv"
            android:layout_width="wrap_content" android:orientation="horizontal">
            <ImageView android:id="@+id/imageGroup400"
                android:layout_height="@dimen/_53pxh"
                android:layout_width="@dimen/_36pxh"
                android:scaleType="fitXY" android:src="@drawable/img_group400_4"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtSGGrocery"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_8pxv"
                android:layout_marginStart="@dimen/_11pxh"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_weight="0.83" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{incorrectOtpVM.incorrectOtpModel.txtSGGrocery}"
                style="@style/txtMontserratlight28" tools:text="@string/lbl_sg_grocery"/>
        </LinearLayout>
        <TextView android:ellipsize="end" android:gravity="start"
            android:id="@+id/txtLoginRegist"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_35pxh"
            android:layout_marginStart="@dimen/_38pxh"
            android:layout_marginTop="@dimen/_102pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@{incorrectOtpVM.incorrectOtpModel.txtLoginRegist}"
            style="@style/txtMontserratsemibold24" tools:text="@string/msg_login_regist"/>
        <TextView android:ellipsize="end"
            android:gravity="center_horizontal"
            android:id="@+id/txtOTPIsSendTo"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_24pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@{incorrectOtpVM.incorrectOtpModel.txtOTPIsSendTo}"
            style="@style/txtPoppinsmedium18" tools:text="@string/msg_otp_is_send_to"/>
        <com.mukesh.OtpView android:focusableInTouchMode="true"
            android:id="@+id/otpViewOtpview" android:inputType="number"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_68pxv"
            android:layout_width="wrap_content"
            android:textColor="@color/red_400"
            android:textSize="@dimen/_18pxh" app:OtpItemCount="4"
            app:OtpItemSpacing="@dimen/_16pxh"
            app:OtpItemWidth="@dimen/_49pxh"
            app:OtpLineColor="@color/red_400" app:OtpViewType="line"/>
        <LinearLayout android:gravity="center_vertical"
            android:id="@+id/linearErrormessage"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_24pxv"
            android:layout_width="wrap_content" android:orientation="horizontal">
            <ImageView android:id="@+id/imageIcerror"
                android:layout_height="@dimen/_24pxh"
                android:layout_width="@dimen/_25pxh"
                android:scaleType="fitXY" android:src="@drawable/img_icerror"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtYouEnteredAn"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_1pxv"
                android:layout_marginStart="@dimen/_8pxh"
                android:layout_marginTop="@dimen/_2pxv"
                android:layout_weight="0.89" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{incorrectOtpVM.incorrectOtpModel.txtYouEnteredAn}"
                style="@style/txtPoppinsregular14_1" tools:text="@string/msg_you_entered_an"/>
        </LinearLayout>
        <TextView android:ellipsize="end" android:id="@+id/txtResend"
            android:layout_gravity="end"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_91pxh"
            android:layout_marginStart="@dimen/_91pxh"
            android:layout_marginTop="@dimen/_8pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{incorrectOtpVM.incorrectOtpModel.txtResend}"
            style="@style/txtPoppinsregular16" tools:text="@string/lbl_resend"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnVerifyOTP"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_24pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_14pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_14pxv" android:singleLine="true"
            android:text="@string/lbl_verify_otp"
            android:textAllCaps="false" style="@style/btnSolidRounded_6" tools:text="@string/lbl_verify_otp"/>
    </LinearLayout>
</layout>
